--- a/Sweepstakes/Sweepstakes.csproj
+++ b/Sweepstakes/Sweepstakes.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{69E9CFD9-1CD6-49D7-9CEE-509D4D784A3C}</ProjectGuid>
+    <ProjectGuid>{3CAC4F13-1CBE-407F-BD36-55416FA4BF44}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>Sweepstakes</RootNamespace>
     <AssemblyName>Sweepstakes</AssemblyName>
@@ -43,8 +43,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contestant.cs" />
+    <Compile Include="ISweepstakesManager.cs" />
+    <Compile Include="MarketingFirm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sweepstakes.cs" />
+    <Compile Include="SweepstakesQeueManager.cs" />
+    <Compile Include="SweepstakesStackManager.cs" />
+    <Compile Include="UserInterface.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
